[package]
name = "com_logger"
version = "0.1.2"
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2018"
description = "Serial port logger through COM ports"
homepage = "https://github.com/yushiomote/com_logger"
repository = "https://github.com/yushiomote/com_logger"
documentation = "https://docs.rs/com_logger"
license = "MIT"
readme = "README.md"

[dependencies]
uart_16550 = "0.3.0"
log = { version = "0.4.22", default-features = false }
spin = "0.9.8"
